--- a/Aufgabe 0/index.html
+++ b/Aufgabe 0/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<!--
+Aufgabe: Aufgabe 0 Arbeitsfähigkeit
+Name: Iven Otis Sieglen
+Matrikel: 261012
+Datum: 24.März 2019
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert.
+-->
+<html lang="DE">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="stylesheet.css">
+    <script src="./TS/script.js"></script>
+    <title>Landingpage</title>
+</head>
+<body>
+    <header>
+    <h1>Registrieren Sie sich jetzt:</h1>
+    </header>
+    <main>
+        <p onclick="YourNameHere()">Melde dich jetzt an!</p>
+
+        <p id="htmlText"></p>
+    </main>
+    <aside><iframe src="https://giphy.com/embed/3ornk4eujcLES8Ct68" width="250" height="250" frameBorder="0"></iframe></aside>
+
+</body>
+</html>
 
