--- a/Aufgabe_0/index.html
+++ b/Aufgabe_0/index.html
@@ -23,6 +23,8 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
         <p onclick="YourNameHere()">Melde dich jetzt an!</p>
 
         <p id="htmlText"></p>
+
+        <p><button><a href="https://ivenios.github.io/EIA2/Aufgabe_0/TS/script.js/" target="blank"></a>JS Datei</button></p>
     </main>
     <aside><iframe src="https://giphy.com/embed/3ornk4eujcLES8Ct68" width="250" height="250" frameBorder="0"></iframe></aside>
 
