--- a/Aufgabe_0/index.html
+++ b/Aufgabe_0/index.html
@@ -12,7 +12,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="./TS/script.js"></script>
+    
     <title>Landingpage</title>
 </head>
 <body>
@@ -20,6 +20,8 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
     <h1>Registrieren Sie sich jetzt:</h1>
     </header>
     <main>
+        <p>Melde dich jetzt an!</p>
+
         <p id="htmlText"></p>
 
         <p><button><a href="https://ivenios.github.io/EIA2/Aufgabe_0/TS/script.js/" target="_blank"></a>JS Datei</button></p>
