--- a/Aufgabe_0/index.html
+++ b/Aufgabe_0/index.html
@@ -12,7 +12,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
-    
+    <script src="./TS/script.js"></script>
     <title>Landingpage</title>
 </head>
 <body>
@@ -24,7 +24,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 
         <p id="htmlText"></p>
 
-        <p><button><a href="https://ivenios.github.io/EIA2/Aufgabe_0/TS/script.js/" target="_blank"></a>JS Datei</button></p>
+        <p><a href="https://raw.githubusercontent.com/ivenios/EIA2/master/Aufgabe_0/TS/script.js" target="_blank">JS Datei</a></p>
     </main>
     <aside><iframe src="https://giphy.com/embed/3ornk4eujcLES8Ct68" width="250" height="250" frameBorder="0"></iframe></aside>
 
