--- a/Aufgabe_2/MauMau/index.html
+++ b/Aufgabe_2/MauMau/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="DE">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <script src="./ts/script.js"></script>
+    <title>Mau Mau das einzigartige Spiel </title>
 </head>
 <body>
     <header>
-
+        <h1>Das Mau Mau Spiel</h1>
     </header>
     <main>
         <section>
-
-        
+<img src="" alt="" srcset="">
         </section>
         <section>
+            <div id="html">
 
-
+            </div>
         </section>
-    </main>
-    <footer>
 
-    </footer>
+
+    </main>
 </body>
 </html>
