--- a/Aufgabe_2/MauMau/index.html
+++ b/Aufgabe_2/MauMau/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
+<!--
+Aufgabe: Aufgabe 2 Mau Mau 
+Name: Iven Otis Sieglen
+Matrikel: 261012
+Datum: 07.04.19
+	
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert.
+-->
 <html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/stylesheet.css">
     <script src="./ts/script.js"></script>
     <title>Mau Mau das einzigartige Spiel </title>
 </head>
