ES FUNKTIONIERT :basecampy:

--- a/Aufgabe_2/MauMau/index.html
+++ b/Aufgabe_2/MauMau/index.html
@@ -22,6 +22,12 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
     </header>
     <main>
         <section>
+            <div>
+
+            </div>
+            <div>
+                
+            </div>
         </section>
         <section>
             <div id="html">
