--- a/Aufgabe_2/MauMau/index.html
+++ b/Aufgabe_2/MauMau/index.html
@@ -21,19 +21,18 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
         <h1>Das Mau Mau Spiel</h1>
     </header>
     <main>
-        <section>
-            <div>
-
+        <section class="sektion">
+            <div class="masterStapel">
+                <img src="./KartenMuster.jpg" alt="" height="280px" width="200px"srcset="">
             </div>
-            <div>
-                
-            </div>
-        </section>
-        <section>
-            <div id="html">
+            <div class="ablegeStapel" >
 
             </div>
         </section>
+
+        <div class="spielerKarten" id="html">
+
+        </div>
 
 
     </main>
