--- a/Aufgabe_2/MauMau/index.html
+++ b/Aufgabe_2/MauMau/index.html
@@ -21,7 +21,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
         <h1>Das Mau Mau Spiel</h1>
     </header>
     <main>
-        <section class="sektion">
+        <section class="sektion" id="Stapelz">
             <div class="masterStapel">
                 <img src="./KartenMuster.jpg" alt="" height="280px" width="200px"srcset="">
             </div>
