Korrektur der Stapel Funktion

--- a/Aufgabe_2/MauMau/index.html
+++ b/Aufgabe_2/MauMau/index.html
@@ -21,7 +21,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
         <h1>Das Mau Mau Spiel</h1>
     </header>
     <main>
-        <section class="sektion" id="Stapelz">
+        <section class="sektion" id="stapel">
 
         </section>
 
