--- a/Aufgabe_2/MauMau/index.html
+++ b/Aufgabe_2/MauMau/index.html
@@ -21,11 +21,11 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
         <h1>Das Mau Mau Spiel</h1>
     </header>
     <main>
-        <section class="sektion" id="stapel">
+        <section class="Sektion" id="stapel">
 
         </section>
 
-        <div class="spielerKarten" id="html">
+        <div class="SpielerKarten" id="html">
 
         </div>
 
