wip alle liseners und erster versucht von carddraw funktioniert

--- a/Aufgabe_2/MauMau/index.html
+++ b/Aufgabe_2/MauMau/index.html
@@ -23,6 +23,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
     <main>
         <section class="Sektion" id="stapel">
 
+             <button id="butt">Sort it!</button>
         </section>
 
         <div class="SpielerKarten" id="html">
