--- a/Aufgabe_4/DE_eis/DEeis.html
+++ b/Aufgabe_4/DE_eis/DEeis.html
@@ -29,9 +29,26 @@
     <section>
         <fieldset id="Eissorten">
             <legend>Unsere Eissorten</legend>
+            <input type="text" name="Datalist" list="options" id=""><input type="number" name="Stepper" step="1" min="0" max="25" value="0" id="">
+            <input type="text" name="Datalist" list="options" id=""><input type="number" name="Stepper" step="1" min="0" max="25" value="0" id="">
+            <input type="text" name="Datalist" list="options" id=""><input type="number" name="Stepper" step="1" min="0" max="25" value="0" id="">
+            <input type="text" name="Datalist" list="options" id=""><input type="number" name="Stepper" step="1" min="0" max="25" value="0" id="">
+            <datalist id="options">
+                    <option value="Butter"> </option>
+                    <option value="Milk"> </option>
+                    <option value="Flour"> </option>
+                    <option value="Sugar"> </option>
+                    <option value="Eggs"> </option>
+                    <option value="Salt"> </option>
+                    <option value="Bread"> </option>
+                </datalist>
         </fieldset>
         <fieldset id="Darreichungsform">
             <legend>Wie möchtest du dein Eis</legend>
+            <input type="radio" name="" id="">
+            <input type="radio" name="" id="">
+            <input type="radio" name="" id="">
+            <input type="radio" name="" id="">
         </fieldset>
         <fieldset id="Toppings"> 
             <legend>Das beste kommt oben drauf:</legend>
