--- a/Aufgabe_4/DE_eis/DEeis.html
+++ b/Aufgabe_4/DE_eis/DEeis.html
@@ -72,7 +72,15 @@
                 <p>
                     Du bekommst dein Eis <span id="ShipFormat"></span> und <span id="ShipTime"></span>
                 </p>
-                <p>Dein Bestellwert:<span id="Preis"></span> </p>
+                <p>
+                    Deine Daten:
+                    <p>Name: <span id="UserName"></span></p>
+                    <p>Mail: <span id="UserMail"></span></p>
+                    <p>Adresse: <span id="UserStreet"></span> / <span id="UserHouseNum"></span></p>
+                    <p>PLZ/Stadt: <span id="UserPLZ"></span> / <span id="UserCity"></span></p>
+                    <p>Telefonnummer: <span id="UserTele"></span></p>
+                </p>
+                <p>Dein Bestellwert:<span id="Preis"></span> <span id="Zahlungsmittel"></span></p>
                 <button id="BestellButton">Bestellung abschicken</button>
             </div>
         </div>
@@ -383,18 +391,18 @@
         <fieldset id="Adressfeld">
             <legend>Deine Daten:</legend>
             Dein Name:
-            <input type="text" name="Text" placeholder="Miriam Musterfrau" required />
+            <input type="text" name="Name" placeholder="Miriam Musterfrau" required />
             Deine e-Mail:
             <input type="email" name="Mail" placeholder="miriamxXxx.musterwoman@mail.com" />
             Straße und Hausnummer:
-            <input type="text" name="Text" placeholder="Langustenweg" required /><input type="text" name="Text"
+            <input type="text" name="Street" placeholder="Langustenweg" required /><input type="text" name="Hausnr"
                 placeholder="z.b.:2" required pattern="[0-9]" />
             PLZ:
-            <input type="text" name="Pattern" pattern="[0-9]{5}" placeholder="z.B.70597" required />
+            <input type="text" name="PLZ" pattern="[0-9]{5}" placeholder="z.B.70597" required />
             Stadt:
-            <input type="text" name="Text" placeholder="Furtwangen im Schwarzwald" required />
+            <input type="text" name="Stadt" placeholder="Furtwangen im Schwarzwald" required />
             Telefonnummer:
-            <input type="text" name="Pattern" pattern="[0-9]" placeholder="071112456" />
+            <input type="number" name="Telenr"  placeholder="071112456" />
 
         </fieldset>
         <fieldset id="AGB">
