funktionsfähiger FUnktion (muss höchstwahrscheinlich verteitigen) hochladen

--- a/Aufgabe_4/DE_eis/DEeis.html
+++ b/Aufgabe_4/DE_eis/DEeis.html
@@ -409,7 +409,7 @@
             <legend>Unsere AGB:</legend>
             <input type="radio" name="Agbgroup" id="Agb2" value="AGB gelesen">
             <label for="Agb1">Habe gelesen und bin einverstanden</label>
-            <input type="radio" name="Agbgroup" id="Agb2" value="AGB nnicht einverstanden">
+            <input type="radio" name="Agbgroup" id="Agb2" value="AGB nicht einverstanden">
             <label for="Agb2">Nicht einverstanden</label>
             <input type="radio" name="Agbgroup" id="Agb3" value="Dumm">
             <label for="Agb3">Ich kann nicht lesen</label>
