bisschen etwas funktioniert, aber eigentlich noch nichts

--- a/Aufgabe_4/DE_eis/DEeis.html
+++ b/Aufgabe_4/DE_eis/DEeis.html
@@ -203,7 +203,7 @@
                             <option value="Blaubeere">Blaubeere</option>
                     </optgroup>
                     <optgroup label="Mal was anderes!">
-                            <option value="Karamell-Meersalz">Karamell-Meersalz/option>
+                            <option value="Karamell-Meersalz">Karamell-Meersalz</option>
                                     <option value="Weiße Schokolade">Weiße Schokolade</option>
                                     <option value="Viagra">Hard Time ;)</option>
                                     <option value="Muttermilch">Mutterlich</option>
