Grundfunktionen hergestellt, überprüffunktion und change funktion muss erneut korrigiert werden, da noch alte versuion #

--- a/Aufgabe_4/DE_eis/DEeis.html
+++ b/Aufgabe_4/DE_eis/DEeis.html
@@ -360,7 +360,7 @@
         </div>
         <fieldset id="Besteck">
             <legend>Göffel oder Label?</legend>
-            <input type="radio" name="Besteckgroup" id="Best1" value="Löffel">
+            <input type="ç‚" name="Besteckgroup" id="Best1" value="Löffel">
             <label for="Best1">Löffel</label>
             <input type="radio" name="Besteckgroup" id="Best2" value="Gabel">
             <label for="Best2">Gabel</label>
