alles tut, ich weiß aber nicht wieso

--- a/Aufgabe_5/EisDealer/index.html
+++ b/Aufgabe_5/EisDealer/index.html
@@ -40,35 +40,8 @@
                         </p>
                         <p><span id="BechoWaff"></span> mit <span id="GaboLoff"></span></p> 
                         <p> Deine Toppings:
-                            <p id="Schoko-Steußel"></p>
-                            <p id="Snickers"></p>
-                            <p id="Tropical"></p>
-                            <p id="Schokolinsen"></p>
-                            <p id="Lions"></p>
-                            <p id="Bounty"></p>
-                            <p id="Kit-Kat"></p>
-                            <p id="Buchstabenstreußel"></p>
-                            <p id="Schoko-Sauce"></p>
-                            <p id="Karamell-Sauce"></p>
-                            <p id="Vanille-Sauce""></p>
-                            <p id="Himbeere-Sauce"></p>
-                            <p id="Schlumpf-Sauce"></p>
-                            <p id="Apfel-Sauce"></p>
-                            <p id="Erdbeere-Value"></p>
-                            <p id="Salzsäure"></p>
-                            <p id="Wasabi"></p>
-                            <p id="Geschmeltze Zwiebeln"></p>
-                            <p id="Ibuprofen 800mg"></p>
-                            <p id="Tabasco"></p>
-                            <p id="Parmesan"></p>
-                        </p>
-                        <p>Erste Sahne alles hier: 
-                            <p id="Gewohnliche Schlagsahne"></p>
-                            <p id="Lactose-Frei Schlagsahne"></p>
-                            <p id="Vegane Sahneersatzprodukte"></p> 
-                            <p id="Schokosahne"></p>
-                            <p id="Mehr Sahne als Eis"></p>   
-                        
+                            <span id="TopÜbersicht"></span>
+                            
                         </p>
                         <p>
                             Du bekommst dein Eis <span id="ShipFormat"></span> und <span id="ShipTime"></span>
