einbindung des EisDealers

--- a/Aufgabe_6/EisDealerNode/index.html
+++ b/Aufgabe_6/EisDealerNode/index.html
@@ -61,7 +61,7 @@
         
             </aside>
 
-    <section class="fieldsetcontainer">
+    <form class="fieldsetcontainer" action="https://ios-eia2.herokuapp.com" method="GET">
         <fieldset>
 
             <div>
@@ -103,6 +103,7 @@
                 <input type="number" name="Stepper4" step="1" min="0" max="55" value="0" />
             </div>
         </fieldset>
+        
         <div id="Toppings">
             <p>Das beste kommt oben drauf (für 80ct das Stück):</p>
             <fieldset id="Streußel">
@@ -171,7 +172,7 @@
             <input type="radio" name="Zahlungsgroup" id="Zahl6">
             <label for="Zahl6">Niere</label>
         </fieldset>
-    </section>
+    </form>
 
 
 
