--- a/Aufgabe_6/EisDealerNode/index.html
+++ b/Aufgabe_6/EisDealerNode/index.html
@@ -62,7 +62,7 @@
         
             </aside>
 
-    <form class="fieldsetcontainer" action="https://ios-eia2.herokuapp.com" method="GET">
+    <form class="fieldsetcontainer" action="http://localhost:8100" method="GET">
         <fieldset>
 
             <div>
