--- a/Aufgabe_6/EisDealerNode/index.html
+++ b/Aufgabe_6/EisDealerNode/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/DEeis_css.css">
     <script src="./TS/main.js"></script>
     <script src="./TS/data.js"></script>
-    <!--<script src="./Server/Server.js"></script>-->
+    <<script src="./Server/Server.js"></script>
     <title>Eis.de ;)</title>
 </head>
 
