--- a/Aufgabe_6/EisDealerNode/index.html
+++ b/Aufgabe_6/EisDealerNode/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/DEeis_css.css">
     <script src="./TS/main.js"></script>
     <script src="./TS/data.js"></script>
-    <<script src="./Server/Server.js"></script>
+    <!--<script src="./Server/Server.js"></script>-->
     <title>Eis.de ;)</title>
 </head>
 
@@ -62,7 +62,7 @@
         
             </aside>
 
-    <form class="fieldsetcontainer" action="http://localhost:8100" method="GET">
+    <form class="fieldsetcontainer" action="https://ios-eia2.herokuapp.com" method="GET">
         <fieldset>
 
             <div>
