--- a/Aufgabe_6/Client/SendData.html
+++ b/Aufgabe_6/Client/SendData.html
@@ -7,9 +7,9 @@
 	<script src="SendData.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-	<!--  - ->
-	<form action="https://eia2-testserver.herokuapp.com" method="get">
 	<!--  -->
+	<form action="https://ios-eia2.herokuapp.com" method="get">
+	<!--  ->
 	<form action="http://localhost:8100" method="get">
 	<!--  - ->
 	<form action="SendData.html" method="get">
