server test die zweite

--- a/Aufgabe_6/EisDealerNode/index.html
+++ b/Aufgabe_6/EisDealerNode/index.html
@@ -62,8 +62,8 @@
         
             </aside>
 
-    <form class="fieldsetcontainer" action="" method="GET">
-            <button id="SendeBestellung" type="submit"></button>
+    <form class="fieldsetcontainer" action="http://ios-eia2.herokuapp.com/" method="GET">
+           
         <fieldset>
 
             <div>
@@ -174,6 +174,7 @@
             <input type="radio" name="Zahlungsgroup" id="Zahl6">
             <label for="Zahl6">Niere</label>
         </fieldset>
+        <button type="submit"></button>
     </form>
 
 
